--- a/source/team/index.html
+++ b/source/team/index.html
@@ -18,6 +18,10 @@ footer: false
         	<img src="/images/wojtek.jpeg" class="team-profile-image">
         	<p><a href="https://twitter.com/wojteklukaszuk">Wojtek</a></p>
         </div>
+        <div class="team-profile">
+            <img src="/images/marcin.png" class="team-profile-image">
+                <p><a href="https://twitter.com/noxytrux">Marcin</a></p>
+                </div>
     </div>
     <div id="social">
         <a class="twitter" href="http://twitter.com/nshintio" title="Twitter"></a>
