add contributors section

--- a/.themes/nshint/source/team/index.html
+++ b/.themes/nshint/source/team/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 
+title:
 footer: false
 ---
 <h1 class="team-title">Team</h1>
@@ -19,13 +19,24 @@ footer: false
         	<p><a href="https://twitter.com/wojteklukaszuk">Wojtek</a></p>
         </div>
         <div class="team-profile">
-            <img src="/images/marcin.png" class="team-profile-image">
-                <p><a href="https://twitter.com/noxytrux">Marcin</a></p>
-                </div>
+          <img src="/images/marcin.png" class="team-profile-image">
+          <p><a href="https://twitter.com/noxytrux">Marcin</a></p>
+        </div>
     </div>
-    <div id="social">
-        <a class="twitter" href="http://twitter.com/nshintio" title="Twitter"></a>
-        <a class="github" href="http://github.com/nshintio" title="Github"></a>
-        <a class="mail" href="mailto:nshintio@gmail.com" title="Mail"></a>
+</div>
+
+<h1 class="team-title">Contributors</h1>
+<div id="about">
+    <div class="team">
+        <div class="team-profile">
+        	<img src="/images/kondrat.jpeg" class="team-profile-image"/>
+        	<p><a href="https://twitter.com/Maroreram">Kondrat</a></p>
+        </div>
     </div>
+</div>
+
+<div id="social">
+    <a class="twitter" href="http://twitter.com/nshintio" title="Twitter"></a>
+    <a class="github" href="http://github.com/nshintio" title="Github"></a>
+    <a class="mail" href="mailto:nshintio@gmail.com" title="Mail"></a>
 </div>
