Replace wojteklukaszuk with wojteklu

--- a/.themes/nshint/source/team/index.html
+++ b/.themes/nshint/source/team/index.html
@@ -16,7 +16,7 @@ footer: false
         </div>
         <div class="team-profile">
         	<img src="/images/wojtek.jpeg" class="team-profile-image">
-        	<p><a href="https://twitter.com/wojteklukaszuk">Wojtek</a></p>
+        	<p><a href="https://twitter.com/wojteklu">Wojtek</a></p>
         </div>
         <div class="team-profile">
           <img src="/images/marcin.png" class="team-profile-image">
